# curll

./: Cargo.toml  Readme.md
src/: get.rs  main.rs
