[package]
name = "rust"
version = "0.1.0"
edition = "2024"
license ="MIT OR Apache-2.0"
readme ="Readme.md"
repository ="https://github.com/durgaprasad118/rust"
description ="A rust curl"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] } # Don't add "blocking" feature for async
tokio = { version = "1", features = ["full"] } #

